--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,7 @@
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "livewire/livewire": "^2.12",
-        "maatwebsite/excel": "^3.1",
-        "power-components/livewire-powergrid": "^3.7"
+        "maatwebsite/excel": "^3.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
